--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header div {
 /* MAIN */
 main {
     height: 80vh;
-    padding: 40px 0;
+    padding: 30px 0 50px 0;
 
     display: flex;
     flex-wrap: wrap;    
@@ -65,4 +65,9 @@ main span {
 /* / MAIN */
 
 /* FOOTER */
+footer {
+    background-color: #222222;
+    height: 10vh;
+}
+
 /* / FOOTER */
