--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@
 body {
     background-color: #000000;
     font-family: sans-serif;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 100vh;
 }
 
 .container {
@@ -26,13 +32,12 @@ header div {
     background-color: #4a4a4a;
     padding: 5px;
     border-radius: 5px;
-    margin: 5px;
+    margin: 7px;
 }
 /* / HEADER */
 
 /* MAIN */
 main {
-    height: 80vh;
     padding: 30px 0 50px 0;
 
     display: flex;
@@ -43,13 +48,12 @@ main .img-center {
     background-image: url("https://picsum.photos/1000/1000");
     background-size: cover;
     background-repeat: no-repeat;
-    height: calc(100% / 5);
+    height: 130px;
     width: calc(98% / 7);
 
     display: flex;
     justify-content: flex-start;
-    align-items: flex-end;
-    align-content: center;    
+    align-items: flex-end;  
     
     margin: 7px 2px;
 }
@@ -67,7 +71,71 @@ main span {
 /* FOOTER */
 footer {
     background-color: #222222;
-    height: 10vh;
+    height: 7vh;
+    display: flex;
+    flex-direction: row;
+}
+
+footer > div {
+    width: calc(100% / 3);
+}
+
+footer .icon-footer {
+    transform: scale(1.6);
+}
+
+footer .icon-arrow {
+    transform: scale(0.5);
+}
+
+.footer-sx {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.footer-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-sx div,
+.footer-center div {
+color: white;
+
+padding: 15px 0px 0px 0px;
+
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+
+footer span {
+    font-size: 10px;
+    margin: 10px;
+}
+
+.footer-dx {
+    display: flex;
+    justify-content: flex-end;
+    align-items: stretch;
+}
+
+.footer-dx p {
+    background-color: #4a4a4a;
+    color: red;
+    font-size: 12px;
+
+    padding: 0 25px;
+
+
+    display: flex;
+    align-items: center;
+
+    
 }
 
 /* / FOOTER */
+
