--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,12 @@ main span:hover {
    font-size: 20px;
 }
 
+main .img-center:hover {
+    height: 130px;
+    width: calc(98% / 7);
+
+    border: 3px solid white;
+}
 
 .footer-sx div:hover,
 .footer-center div:hover,
